Small fix for the loading indicator looking invisible

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -105,6 +105,7 @@ h2.description {
   border-radius: 4px;
   line-height: 144px;
   font-size: 18px;
+  color: #333;
 }
 
 #error {
